# restmachine

./: restmachine.cabal
Restmachine/: Core.hs
Restmachine/Core/: Flow.hs  Types.hs
restmachine-core/: README.md  restmachine-core.cabal
restmachine-core/Restmachine/: Core.hs
restmachine-core/Restmachine/Core/: Flow.hs  Routing.hs  Types.hs
restmachine-core/tests/: Flow.hs  Routing.hs  Runner.hs
restmachine-wai/: LICENSE  restmachine-wai.cabal
restmachine-wai/Restmachine/: Wai.hs
restmachine-wai/examples/: Simple.hs
tests/: Runner.hs
