name:                restmachine-wai
version:             0.1.0.0
synopsis:            WAI bindings for Restmachine
homepage:            http://github.com/bhoflack/restmachine
license:             BSD3
license-file:        LICENSE
author:              Brecht Hoflack
maintainer:          brecht.hoflack@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Restmachine.Wai
  build-depends:       base >=4.6 && <4.7
                     , wai >= 3.0.1.1
                     , restmachine-core >= 0.1.0.0
                     , lens >= 3.10
                     , mtl >= 2.2.1
                     , bytestring >= 0.10.0.2
  default-language:    Haskell2010